# jdenys-python

./: LICENSE  README.md  pyproject.toml
src/jdenys_python/: __init__.py  console.py
