[tool.poetry]
name = "jdenys-python"
version = "0.1.0"
description = "Derived from The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tuinhier/jdenys-python"
repository = "https://github.com/tuinhier/jdenys-python"
keywords = ["hypermodern"]
authors = ["Jos Denys <jos.denys@gmail.com>"]

[tool.poetry.scripts]
jdenys-python = "jdenys_python.console:main"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
